# MPC-estudo

./: README.md  bot_whatssap.ipynb  cliente.py  pyproject.toml  requirements.txt  servidor.py  servidor_previsao_tempo.py
