[project]
name = "mpc-estudo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.10.5",
    "groq>=0.30.0",
    "ipykernel>=6.29.5",
    "openai>=1.97.0",
    "python-dotenv>=1.1.1",
    "selenium>=4.34.2",
    "webdriver-manager>=4.0.2",
    "wikipedia>=1.4.0",
]
